# Akane

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
akane-core/: CMakeLists.txt
akane-core-legacy/include/akane/: color.h  debug.h  light.h  material.h  mesh.h  primitive.h  render.h  sampler.h  scene.h
akane-core-legacy/include/akane/bsdf/: hybrid.h  lambertian.h
akane-core-legacy/include/akane/common/: arena.h
akane-core-legacy/include/akane/light/: area.h  distant.h  infinite.h
akane-core-legacy/include/akane/math/: math.h  (+3 more)
akane-core-legacy/src/akane/: mesh.cpp  render.cpp  texture.cpp
akane-core/include-internal/akane/: body.h  lights.h  scene.h  spectrum.h
akane-core/include-internal/akane/common/: memory_arena.h
akane-core/include-internal/akane/math/: geometry.h  math.h
akane-core/include/akane/: body.h  bsdf.h  bsdf_util.h  camera.h  canvas.h  core.h  debug.h  integrator.h  light.h  material.h  mesh.h  model.h  primitive.h  ray.h  render.h  sampler.h  scene.h  spectrum.h  texture.h
akane-core/include/akane/body/: composite.h  sphere.h
akane-core/include/akane/bsdf/: hybrid.h  lambertian.h  microfacet.h  specular.h
akane-core/include/akane/common/: arena.h  basic.h  language_utils.h  object.h  ptr_arithmetic.h  random.h  workspace.h
akane-core/include/akane/io/: image.h
akane-core/include/akane/light/: area.h  infinite.h  skybox.h
akane-core/include/akane/material/: basic.h  generic.h
akane-core/include/akane/math/: distribution.h  float_type.h  geometry.h  math.h  point.h  random.h  sampling.h  transform.h  vector.h
akane-core/include/akane/primitive/: composite.h  embree_triangle.h  sphere.h
akane-core/include/akane/scene/: akane_scene.h  embree_scene.h  scene_base.h
akane-core/src/akane/: camera.h  canvas.cpp  core.h  film.h  integrator.h  light.cpp  main.cpp  mesh.cpp  model.cpp  render.cpp  render.h  sampler.cpp  sampler.h  scene.h  spectrum.h  texture.cpp
akane-core/src/akane/body/: sphere.cpp
akane-core/src/akane/bsdf/: bsdf.cpp  bsdf_geometry.h  hybrid.h  lambertian.cpp  lambertian.h  microfacet.cpp  microfacet.h  specular.h
akane-core/src/akane/camera/: perspective.h  pinhole.cpp  pinhole_camera.cpp
akane-core/src/akane/common/: image.cpp  image.h  random.h
akane-core/src/akane/global_light/: distant.h  linear_blend.h
akane-core/src/akane/integrator/: direct_intersection.cpp  direct_intersection_integrator.cpp  direct_lighting_integrator.cpp  normal_mapped.h  path_tracing.cpp  path_tracing.h  path_tracing_integrator.cpp
akane-core/src/akane/io/: image.cpp
akane-core/src/akane/light/: area.cpp  diffuse.h  distant.h  light.cpp  point.h  skybox.h  spot.h
akane-core/src/akane/material/: basic.cpp  generic.cpp  generic.h  lambertian.h  test.h
akane-core/src/akane/math/: float_type.h  geometry.h  sampling.h
akane-core/src/akane/primitive/embree/: triangle.h
akane-core/src/akane/primitive/integrated/: geometric.h
akane-core/src/akane/sampler/: random_sampler.cpp
akane-core/src/akane/scene/: embree.cpp  embree.h  embree_scene.cpp  integrated.cpp  integrated.h  scene.cpp  scene_base.cpp
akane-core/src/akane/shape/: disk.h  empty.h  rect.h  sphere.h  transformed.h
akane-core/src/akane/texture/: checkerboard.h  image.cpp  image.h  solid.h
akane-gui/: CMakeLists.txt
akane-gui-legacy/: CMakeLists.txt
akane-gui-legacy/include/: akane_app.h  raw_edit.h  render.h  scene_edit.h
akane-gui/include/: helper.h  scene_edit.h
akane-gui/src/: app.h  application.cpp  helper.cpp  main.cpp  raw_edit.cpp  scene_edit.cpp  scene_edit.h
akane-shell/: CMakeLists.txt
akane-shell-legacy/src/: main.cpp
akane-shell/src/: main.cpp  mesh.cpp
cmake/: FindEdsLib.cmake  FindEmbree.cmake  FindFmt.cmake  FindFmtlib.cmake  FindJson.cmake  FindQuickImGui.cmake  FindSpdlog.cmake  FindStb.cmake  FindTinyObjLoader.cmake
(+10 files in other folders)
